# recipe-search-2m-ingestion

./: Cargo.toml  README.md
src/: main.rs
