[package]
name = "recipe-search-2m-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
futures = { version = "0.3.31", features = ["executor"] }
indicatif = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
